
+++
*** 'url-user-agent' now defaults to 'default', and the User-Agent
string is computed dynamically based on 'url-privacy-level'.

** VC and related modes

+++
*** 'vc-dir-mode' now binds 'vc-log-outgoing' to 'O'; and has various
branch-related commands on a keymap bound to 'B'.

+++
*** 'vc-region-history' is now bound to 'C-x v h', replacing the older
'vc-insert-headers' binding.

** CC mode

---
*** Opening a .h file will turn C or C++ mode depending on language used.
This is done with the help of the 'c-or-c++-mode' function, which
analyzes buffer contents to infer whether it's a C or C++ source file.

---
** New option 'cpp-message-min-time-interval' to allow user control
of progress messages in cpp.el.

---
** New DNS mode command 'dns-mode-ipv6-to-nibbles' to convert IPv6 addresses
to a format suitable for reverse lookup zone files.

** Ispell

+++
*** Enchant is now supported as a spell-checker.

Enchant is a meta-spell-checker that uses providers such as Hunspell
to do the actual checking.  With it, users can use spell-checkers not
directly supported by Emacs, such as Voikko, Hspell and AppleSpell,
more easily share personal word-lists with other programs, and
configure different spelling-checkers for different languages.
(Version 2.1.0 or later of Enchant is required.)

** Flymake

+++
*** Flymake has been completely redesigned

Flymake now annotates arbitrary buffer regions, not just lines.  It
supports arbitrary diagnostic types, not just errors and warnings (see
variable 'flymake-diagnostic-types-alist').

It also supports multiple simultaneous backends, meaning that you can
check your buffer from different perspectives (see variable
'flymake-diagnostic-functions').  Backends for Emacs Lisp mode are
provided.

The old Flymake behavior is preserved in the so-called "legacy
backend", which has been updated to benefit from the new UI features.

** Term

---
*** `term-char-mode' now makes its buffer read-only.
